# pepper-x

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
app/: Cargo.toml
app/src/: app.rs  app_model.rs  background.rs  cli.rs  diagnostics_view.rs  history_store.rs  history_view.rs  lib.rs  main.rs  onboarding.rs  overlay.rs  session_runtime.rs  settings.rs  settings_view.rs  sound_effects.rs  startup_policy.rs  status_pill.rs  transcript_log.rs  transcription.rs  window.rs
crates/pepperx-asr/: Cargo.toml
crates/pepperx-asr/src/: lib.rs  speaker_filter.rs  transcriber.rs
crates/pepperx-audio/: Cargo.toml
crates/pepperx-cleanup/: Cargo.toml
crates/pepperx-cleanup-helper/: Cargo.toml
crates/pepperx-cleanup-helper/src/: main.rs
crates/pepperx-corrections/: Cargo.toml
crates/pepperx-ipc/: Cargo.toml
crates/pepperx-models/: Cargo.toml
crates/pepperx-platform-gnome/: Cargo.toml
crates/pepperx-platform-gnome/src/: atspi.rs  context.rs  evdev_modifier_capture.rs  lib.rs  screenshot.rs  service.rs
crates/pepperx-session/: Cargo.toml
crates/pepperx-uinput-helper/: Cargo.toml
docs/architecture/: gnome-integration.md  pepper-x-parity-spec.md  text-insertion-strategy.md  uinput-text-injection-spec.md
docs/release/: pepper-x-v1.md
gnome-extension/: README.md  extension.js  ipc.js  keybindings.js  metadata.json
packaging/deb/: control  pepper-x-autostart.desktop  pepper-x.desktop  pepper-x.install
packaging/rpm/: pepper-x.spec
packaging/tests/: test_metadata.py
scripts/: dev-install-extension.sh  dev-run-app.sh  gnome48-smoke-hotkey.sh  smoke-hotkey.sh  smoke-insert-accessible.sh  smoke-insert-cleaned-friendly.sh  smoke-insert-friendly.sh  smoke-insert-terminal.sh  verify-extension-install.sh  verify-uninstall-cleanup.sh  verify-upgrade-fedora.sh  verify-upgrade-ubuntu.sh
tests/smoke/: test_cleanup_pipeline.sh  test_extension_ipc.sh  test_live_recording.sh  test_model_management.sh  test_modifier_only_hotkey.md  test_ocr_cleanup.sh  test_packaging_install.sh  test_prerecorded_asr.sh  test_rerun_pipeline.sh
(+27 files in other folders)
