[package]
name = "pepper-x-app"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "pepper-x"
path = "src/main.rs"

[dependencies]
adw = { package = "libadwaita", version = "0.9.1", features = ["v1_5"] }
gtk = { package = "gtk4", version = "0.11.1", features = ["gnome_46"] }
pepperx-platform-gnome = { path = "../crates/pepperx-platform-gnome" }
serde = { version = "1.0.228", features = ["derive"] }
