[package]
name = "pepper-x-app"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "pepper-x"
path = "src/main.rs"

[dependencies]
adw = { package = "libadwaita", version = "0.9.1", features = ["v1_5"] }
gtk = { package = "gtk4", version = "0.11.1", features = ["gnome_46"] }
pepperx-asr = { path = "../crates/pepperx-asr" }
pepperx-audio = { path = "../crates/pepperx-audio" }
pepperx-cleanup = { path = "../crates/pepperx-cleanup" }
pepperx-ipc = { path = "../crates/pepperx-ipc" }
pepperx-platform-gnome = { path = "../crates/pepperx-platform-gnome" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
